[project]
name = "gw-duplicate-checker"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Izuho Fujiwara", email = "fujishan2212@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "gw_duplicate_checker:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gw_duplicate_checker"]
