[project]
name = "gw-duplicate-checker"
version = "0.1.0"
description = "network gateway duplicate checker"
authors = [
    { name = "Izuho Fujiwara", email = "21aj119@ms.dendai.ac.jp" },
    { name = "Makoto Nakatsuhara", email = "21aj097@ms.dendai.ac.jp"}
]
dependencies = [
    "scapy>=2.5.0",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
start = "gw_duplicate_checker:main"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gw_duplicate_checker"]
